Created an activity cycling class and modified html/css appropriately

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <div class="wrapper-inner">
                 <div class="page-container">
                     <div class="masthead clearfix"></div>
+                    <img id="avatar" width="100px" src="img/avatar_small.jpg" alt="Gideon's avatar" />
                     <div class="main-content">
-                        <img id="avatar" width="100px" src="img/avatar_small.jpg" alt="Gideon's avatar" />
-                        <h1>I am Gideon <small> and I <span id="#activity-box"></span></h1>
+                        <h1>I am Gideon</h1>
+                        <p> and I <span id="activity-box">am waiting...</span></p>
                     </div>
                     <div class="mastfoot"></div>
                 </div>
