--- a/index.html
+++ b/index.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html>
     <head>
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" type="text/css" href="dist/styles.dev.css" />
-        <!-- <link rel="stylesheet" type="text/css" href="dist/styles.css" /> -->
-        <link href='http://fonts.googleapis.com/css?family=Lily+Script+One|Josefin+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
+        <title>I am Gideon</title>
 
-        <script language="javascript" type="text/javascript" src="lib/modernizr/modernizr.js"></script>
-
-        <title>Gideon Farrell</title>
+        <!--{STYLES}-->
+        <link rel="stylesheet" href="dist/styles.dev.css" media="screen" charset="utf-8">
+        <!--{END}-->
     </head>
     <body>
-        <section id="page-home" class="wrapper">
-            <div class="inner">
+        <h1>Coming soon</h1>
 
-                <div class="header shadow-text">
-                    <img src="/img/avatar_small.jpg" alt="avatar" class="avatar" />
- 
-                    <h1>I am Gideon</h1><div class="clearfix"></div>
-                    <p class="subtitle">and I <span id="activity-box">am waiting...</span></p>
-                </div>
-            </div>
-            <footer>
-                <div class="social">
-                    <ul>
-                        <li class='linkedin'><a href="http://uk.linkedin.com/in/gideonfarrell" target="_blank" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                        <li class='github'><a href="https://github.com/gfarrell" target="_blank" title="Github"><i class="fa fa-github-square fa-2x"></i></a></li>
-                        <li class='twitter'><a href="https://twitter.com/gideonfarrell" target="_blank" title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-                        <li class='email' id="email"><a href="#" title="Email"><i class="fa fa-envelope fa-2x"></i></a></li>
-                    </ul>
-                    <div class="clearfix"></div>
-                </div>
-            </footer>
-        </section>
-        
-        <!-- Scripts -->
-        <script language="javascript" type="text/javascript" src="lib/requirejs/require.js" data-main="js/main.js"></script>
-        <!-- <script language="javascript" type="text/javascript" src="lib/requirejs/require.js" data-main="dist/main.js"></script> -->
+        <!--{SCRIPTS}-->
+        <script language="javascript" type="text/javascript" src="js/config.js"></script>
+        <script
+            language="javascript"
+            type="text/javascript"
+            src="/lib/requirejs/require.js"
+            data-main="/js/index.js"
+        ></script>
+        <!--{END}-->
     </body>
 </html>
