Setup podcasts page and add body classing to pages

--- a/podcasts.html
+++ b/podcasts.html
@@ -5,14 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>I am Gideon</title>
+        <title>Podcasts</title>
 
         <!--{STYLES}-->
         <link rel="stylesheet" href="dist/styles.dev.css" media="screen" charset="utf-8">
         <!--{END}-->
     </head>
-    <body class="page-index">
-        <h1>Coming soon</h1>
+    <body class="page-podcasts">
+        <div class="container">
+            <h1>Podcasts</h1>
+
+            <p class="lead">I listen to a <strong>lot</strong> of podcasts. Here's a list of them, which has been developed over the years.</p>
+
+            <ul class="podcasts-list">
+
+            </ul>
+        </div>
 
         <!--{SCRIPTS}-->
         <script language="javascript" type="text/javascript" src="js/config.js"></script>
@@ -20,7 +28,7 @@
             language="javascript"
             type="text/javascript"
             src="/lib/requirejs/require.js"
-            data-main="/js/index.js"
+            data-main="/js/podcasts.js"
         ></script>
         <!--{END}-->
     </body>
