--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
 
         <!--{STYLES}-->
         <link rel="stylesheet" href="dist/styles.dev.css" media="screen" charset="utf-8">
+        <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
         <!--{END}-->
+
+        <link rel="icon" href="favicon.ico">
     </head>
-    <body class="page-index">
-        <h1>Coming soon</h1>
+    <body id="main" class="page-index">
+        <div class="intro container centre">
+            <h1>I am Gideon</h1>
+        </div>
+
+        <footer class="container">
+            <div class="row">
+                <div class="centre col-xs-4 col-s-2 col-m-1 offset-m-3"><a href="https://dispatches.gideonfarrell.co.uk" title="Check out my blog"><img src="dist/assets/img/social/Blog.png" alt="blog" class="social_icon"></a></div>
+                <div class="centre col-xs-4 col-s-2 col-m-1"><a href="https://twitter.com/gideonfarrell" title="Follow me on Twitter"><img src="dist/assets/img/social/Twitter.png" alt="twitter" class="social_icon"></a></div>
+                <div class="centre col-xs-4 col-s-2 col-m-1"><a href="https://uk.linkedin.com/in/gideonfarrell" title="Visit me on LinkedIn"><img src="dist/assets/img/social/LinkedIn.png" alt="linkedin" class="social_icon"></a></div>
+                <div class="centre col-xs-4 col-s-2 col-m-1 reset-xs-only"><a href="https://github.com/gfarrell" title="Fork me on Github"><img src="dist/assets/img/social/Github.png" alt="github" class="social_icon"></a></div>
+                <div class="centre col-xs-4 col-s-2 col-m-1"><a href="https://www.goodreads.com/user/show/11251279-gideon" title="Read my good reads"><img src="dist/assets/img/social/Goodreads.png" alt="goodreads" class="social_icon"></a></div>
+                <div class="centre col-xs-4 col-s-2 col-m-1"><a class="mailto" href="" title="Drop me an email"><img src="dist/assets/img/social/Email.png" alt="email" class="social_icon"></a></div>
+            </div>
+        </footer>
 
         <!--{SCRIPTS}-->
         <script language="javascript" type="text/javascript" src="js/config.js"></script>
