Updated title and favicon link

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>I am Gideon</title>
+        <title>GTF</title>
 
         <!--{STYLES}-->
         <link rel="stylesheet" href="dist/styles.dev.css" media="screen" charset="utf-8">
         <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
         <!--{END}-->
 
-        <link rel="icon" href="favicon.ico">
+        <link rel="shortcut icon" href="//www.gideonfarrell.co.uk/favicon.ico">
     </head>
     <body id="main" class="page-index">
         <div class="intro container centre">
