Use particles on #header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <link rel="shortcut icon" href="//www.gideonfarrell.co.uk/favicon.ico">
     </head>
-    <body id="main" class="page-index">
+    <body id="header" class="page-index">
         <div class="intro container centre">
             <h1>I am Gideon</h1>
         </div>
