--- a/podcasts.html
+++ b/podcasts.html
@@ -5,16 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>Podcasts</title>
+        <title>GTF: Podcasts</title>
 
         <!--{STYLES}-->
         <link rel="stylesheet" href="dist/styles.dev.css" media="screen" charset="utf-8">
+        <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
         <!--{END}-->
+
+        <link rel="shortcut icon" href="//www.gideonfarrell.co.uk/favicon.ico">
     </head>
     <body class="page-podcasts">
-        <div class="container">
+        <header id="header">
             <h1>Podcasts</h1>
-
+        </header>
+        <div class="container">
             <p class="lead">I listen to a <strong>lot</strong> of podcasts. Here's a list of them, which has been developed over the years.</p>
 
             <ul class="podcasts-list">
@@ -31,5 +35,7 @@
             data-main="/js/podcasts.js"
         ></script>
         <!--{END}-->
+
+        <!--{GA}-->
     </body>
 </html>
