--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!--{STYLES}-->
         <link rel="stylesheet" href="dist/styles.dev.css" media="screen" charset="utf-8">
-        <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700|Lily+Script+One' rel='stylesheet' type='text/css'>
         <!--{END}-->
 
         <link rel="shortcut icon" href="//www.gideonfarrell.co.uk/favicon.ico">
